--- a/index.html
+++ b/index.html
@@ -2,133 +2,106 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PlandIt • Home</title>
 
-  <!-- Your site CSS (keep your existing styles) -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/PlandIt/style.css">
 
-  <!-- Preview card styles (new) -->
   <style>
     :root{
-      --uo-garnet:#8f001A;     /* uOttawa garnet to match your palette */
+      --uo-garnet:#8f001A;
       --uo-garnet-700:#6f0c08;
-      --ink:#1f1f1f;
-      --stone:#e9e4df;
-      --surface:#ffffff;
+      --uo-sand:#f7f4f1;
+      --uo-ink:#1f1f1f;
+      --card-bg:#ffffff;
+      --card-shadow:0 8px 24px rgba(0,0,0,.08);
+      --border:#e5e5e5;
     }
 
-    /* Page wrapper so the card sits under your title */
-    .home-wrap{ max-width:1100px; margin:0 auto; padding:24px 16px; }
+    body{ background:#fff; color:var(--uo-ink); }
 
-    /* Calendar preview card */
-    .cp-card{
+    .navbar{ background:var(--uo-garnet); }
+    .navbar .nav_container{ max-width:1100px; margin:0 auto; padding:8px 16px; }
+    .navbar ul{ list-style:none; margin:0; padding:0; display:flex; gap:20px }
+    .navbar a{ color:#fff; text-decoration:none; font-weight:600 }
+
+    .titlebox{ padding:40px 16px 10px; text-align:center; }
+    .titlebox h1{ margin:0; font-size:48px; color:#8a0f0a; }
+    .titlebox h2{ margin:6px 0 0; font-size:26px; color:#777; }
+
+    /* Smaller preview */
+    .preview-wrap{ display:flex; justify-content:center; padding:18px 16px 40px; }
+    .preview-card{
       position:relative;
-      border:1px solid var(--stone);
-      background:var(--surface);
-      border-radius:16px;
-      box-shadow:0 6px 22px rgba(0,0,0,.08);
-      overflow:hidden;
-      margin:32px auto;
-      max-width:980px;
-      height:420px;            /* preview height */
+      width:min(720px, 92vw);    /* << smaller width */
+      background:var(--card-bg);
+      border:1px solid var(--border);
+      border-radius:18px;
+      box-shadow:var(--card-shadow);
     }
-
-    .cp-head{
-      position:absolute; inset:0 0 auto 0; height:46px;
+    .preview-head{
       display:flex; align-items:center; justify-content:space-between;
-      padding:8px 12px 8px 14px;
-      background:linear-gradient(to bottom, rgba(0,0,0,.06), rgba(0,0,0,0));
-      pointer-events:none;     /* lets clicks pass to iframe except on buttons */
+      padding:10px 12px; border-bottom:1px solid var(--border);
+      background:#fafafa; border-top-left-radius:18px; border-top-right-radius:18px;
+      font-weight:700; color:#3a3a3a;
     }
-
-    .cp-title{
-      font:600 14px/1.2 system-ui, -apple-system, Segoe UI, Roboto, Arial;
-      color:#555;
-      letter-spacing:.3px;
-    }
-
-    .cp-actions{ pointer-events:auto; } /* re-enable on the button */
-    .cp-btn{
+    .preview-open{
       display:inline-flex; align-items:center; gap:8px;
-      border:1px solid var(--stone);
-      background:#fff;
-      color:var(--uo-garnet);
-      padding:6px 10px;
-      border-radius:10px;
-      text-decoration:none;
+      padding:6px 9px; border:1px solid var(--border);
+      border-radius:10px; background:#fff; cursor:pointer; text-decoration:none; color:#1f1f1f;
       font-weight:600;
-      transition:.15s ease;
     }
-    .cp-btn:hover{ background:#fafafa; border-color:#ddd; }
-    .cp-btn svg{ width:16px; height:16px; }
+    .preview-open:hover{ background:#f3f3f3 }
 
-    /* The embedded preview */
-    .cp-frame{
-      width:100%; height:100%;
-      border:0;
-      border-radius:16px;
-      /* Preview feel: don’t interact inside the iframe, use the button to open */
-      pointer-events:none;
-      filter: saturate(0.95) contrast(0.98);
+    .iframe-box{
+      height:300px;              /* << smaller height */
+      overflow:hidden;
+      border-bottom-left-radius:18px; border-bottom-right-radius:18px;
+    }
+    .iframe-box iframe{
+      width:100%; height:100%; border:0; overflow:hidden;
     }
 
-    /* Keep your title box centered as before */
-    .titlebox{ padding-top: 80px; text-align:center; } /* a bit less top space */
+    /* Hide old bottom calendar button if present in your CSS */
+    .container, .calendarbox { display:none !important; }
   </style>
 </head>
 <body>
 
-  <!-- (Optional) simple top nav — keep or remove based on your site -->
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="team.html">About Us</a></li>
-      <li><a href="ProductFeatures.html">Product Features</a></li>
-    </ul>
+  <nav class="navbar">
+    <div class="nav_container">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="team.html">About Us</a></li>
+        <li><a href="ProductFeatures.html">Product Features</a></li>
+      </ul>
+    </div>
   </nav>
 
-  <!-- Your existing title -->
   <div class="titlebox">
     <h1 class="toptext">PlandIt</h1>
     <h2 class="bottomtext">uOttawa</h2>
   </div>
 
-  <div class="home-wrap">
-    <!-- Calendar preview card -->
-    <div class="cp-card">
-      <div class="cp-head">
-        <div class="cp-title">Calendar preview</div>
-
-        <!-- Fullscreen / open button -->
-        <!-- If your calendar is in /PlandIt/, change href to "/PlandIt/calendar.html" -->
-        <div class="cp-actions">
-          <a class="cp-btn" href="calendar.html">
-            Open&nbsp;Calendar
-            <!-- “Expand / fullscreen” icon -->
-            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                 stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-              <path d="M14 10V4h6"/>
-              <path d="M10 14H4v6"/>
-              <path d="M14 4l6 6"/>
-              <path d="M4 20l6-6"/>
-            </svg>
-          </a>
-        </div>
+  <!-- SMALL CALENDAR PREVIEW -->
+  <section class="preview-wrap">
+    <div class="preview-card" aria-label="Calendar preview">
+      <div class="preview-head">
+        <span>Calendar</span>
+        <!-- full-screen arrows button → goes to calendar.html -->
+        <a class="preview-open" href="calendar.html" title="Open full calendar">
+          <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true">
+            <path d="M7 3H3v4h2V5h2V3zm12 0h-4v2h2v2h2V3zM5 17H3v4h4v-2H5v-2zm14 2h-2v2h4v-4h-2v2z" fill="currentColor"/>
+          </svg>
+          Open
+        </a>
       </div>
-
-      <!-- Live preview of your calendar (non-interactive) -->
-      <!-- If your calendar is in /PlandIt/, change src to "/PlandIt/calendar.html" -->
-      <iframe class="cp-frame" src="calendar.html"></iframe>
+      <div class="iframe-box">
+        <iframe src="calendar.html" scrolling="no"></iframe>
+      </div>
     </div>
-
-    <!-- Your original “Calendar” button (kept) -->
-    <div class="container">
-      <a class="calendarbox" href="calendar.html">Calendar</a>
-    </div>
-  </div>
+  </section>
 
 </body>
 </html>
-
 
