--- a/team.html
+++ b/team.html
@@ -66,7 +66,7 @@
       <p>Role: Co-Founder</p>
     </div>
     <div class="flex_box">
-      <h2>Illias El Gaauri</h2>
+      <h2>Iliass El Guaari</h2>
       <p>Role: Co-Founder</p>
     </div>
     <div class="flex_box">
